# binance-cpp-trading-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.json
src/: main.cpp
src/market_data/: BestBidAsk.hpp  MarketDataEvent.hpp  MarketDataParser.cpp  MarketDataParser.hpp  Trade.hpp
src/storage/: CsvMarketDataWriter.cpp  CsvMarketDataWriter.hpp  JsonlWriter.cpp  JsonlWriter.hpp
